# acetree_py

./: .gitignore  LICENSE  PLUGIN_MIGRATION_PLAN.md  README.md  analyze_aba_abp.py  analyze_first_errors.py  analyze_jim113_detail.py  analyze_lr_stability.py  analyze_sulston_errors.py  pyproject.toml  test_ablation.py  test_fixes.py  test_labframe_avg.py  test_no_continuity.py  trace_cache_flip.py
acetree_py/: __init__.py  __main__.py
acetree_py/analysis/: __init__.py  export.py  expression.py  measure.py  measure_csv.py  measure_runner.py
acetree_py/core/: cell.py  lineage.py  movie.py  nuclei_manager.py  nucleus.py
acetree_py/editing/: __init__.py  commands.py  history.py  validators.py
acetree_py/gui/: __init__.py  app.py  cell_info_panel.py  color_rules.py  contrast_tools.py  dataset_dialog.py  edit_panel.py  lineage_layout.py  lineage_list.py  lineage_widget.py  measure_dialog.py  (+3 more)
docs/: algorithms.md  architecture.md  user_guide.md
tests/: conftest.py  test_app_save.py  test_auxinfo.py  test_canonical_transform.py  test_cell.py  test_cli.py  test_color_rules.py  test_division_caller.py  test_division_caller_enhanced.py  test_edit_panel.py  test_editing.py  test_export.py  test_expression_analysis.py  test_founder_id.py  test_gui_app.py  test_gui_widgets.py  test_identity.py  test_image_provider.py  test_image_split.py  test_integration.py  test_interleaved_tiff.py  test_io_config.py  test_io_nuclei.py  test_lineage.py  test_lineage_layout.py  test_measure.py  test_naming_comparison.py  test_nuclei_manager.py  test_nucleus.py  test_validation.py
(+17 files in other folders)
