[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "acetree-py"
version = "0.1.0"
description = "Python reimplementation of AceTree for C. elegans embryogenesis visualization"
readme = {text = "Python reimplementation of AceTree for C. elegans embryogenesis visualization.", content-type = "text/plain"}
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "tifffile>=2023.1",
    "typer>=0.9",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
gui = [
    "napari[all]>=0.5,<0.7",
    "qtpy>=2.3",
]
dev = [
    "pytest>=7.0",
    "pytest-qt>=4.2",
    "ruff>=0.1",
]
all = ["acetree-py[gui,dev]"]

[project.scripts]
acetree-py = "acetree_py.__main__:app"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
